# DiffCollision

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: grasp.py  main.py
examples/assets/: grasp.npy
examples/assets/hand/shadow/: right.xml
examples/config/: base.yaml
examples/scripts/ablation/: adp.sh  fix.sh  nbr.sh  upd1.sh  woeg.sh
examples/scripts/baseline/: Analytical.sh  FD.sh  RS0.sh  RS1Dir.sh  ours.sh
examples/scripts/margin/: RS1Dir_base.sh  RS1Dir_best.sh  ours.sh
examples/scripts/step_size/: FD_base.sh  FD_best.sh  RS0_base.sh  RS0_best.sh  RS1Dir_base.sh  RS1Dir_best.sh  ours.sh
examples/util/: rotation.py  vis.py
src/diffcollision/: __init__.py  io.py  utils.py  wp_utils.py
src/diffcollision/core/: __init__.py  analytical.py  base.py  fd.py  rs0.py  rs1dir.py  rs1dist.py  unified.py
src/diffcollision/cpp/: __init__.py  coal_openmp.cpp
tests/: test_multi_mesh.py  test_sphere.py
